whitelist and database issues

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,9 @@
 token='' #INSIRA O TOKEN DO BOT!
 clientId='' #INSIRA O ID DE USUARIO DO BOT
+
+## CONEXAO COM O BANCO DE DADOS, (IMPORTANTE PARA USAR A FUNÇÃO DE WHITELIST AUTOMATICA)
+ database=""
+ host="127.0.0.1" ## SE O BANCO DE DADOS DO SERVIDOR FIVEM ESTIVER NO MESMO SERVIDOR QUE A APLICAÇÃO MANTENHA ESSE HOST, CASO CONTRARIO INSIRA O IP DO BANCO DE DADOS
+ user=""
+ password=""
+ dialect=""
