--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "allNyth <filipematheus2023@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "chokidar": "^3.5.3",
     "discord.js": "^14.9.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "mysql2": "^3.3.0",
+    "sequelize": "^6.31.1"
   }
 }
